# telegram-rag

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  retrieve_channel.py
tests/: test_app.py  test_retrieve_channel.py
